css/styles.css
/* =========================
  CSS Variables
========================= */
:root {
  --white: #ffffff;
  --black: #212121;
  --grey: #757575;
  --light-grey: #dfe9f3;
  --primary-color: #ffc107;
  --secondary-color: #0097a7;
}

/* =========================
  Global Styles & Resets
========================= */
html {
  font-size: 62.5%; /* 1rem = 10px */
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}
body {
  font-size: 1.6rem;
  font-family: "Krub", sans-serif;
  background-image: linear-gradient(to top, var(--light-grey), var(--white) 100%);
}

/* =========================
  Headings
========================= */
h1 {
  font-size: 3.8rem;
}
h2 {
  font-size: 2.8rem;
}
h3 {
  font-size: 1.8rem;
}
h1,
h2,
h3 {
  text-align: center;
}
.title span {
  font-size: 2rem;
}

/* =========================
  Layout Containers
========================= */
.container {
  max-width: 120rem;
  margin: 0 auto;
}

/* =========================
  Buttons
========================= */
.button {
  background-color: var(--secondary-color);
  color: var(--white);
  padding: 1rem 3rem;
  margin-top: 3rem;
  font-size: 2rem;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 700;
  border-radius: 0.5rem;
  width: 90%;
  text-align: center;
}
@media (min-width: 768px) {
  .button {
    width: auto;
  }
}
.shadow {
  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.48);
  background-color: var(--white);
  padding: 2rem;
  border-radius: 1rem;
}

/* =========================
  Navigation Bar
========================= */
.nav-bg {
  background-color: var(--secondary-color);
}
.main-nav {
  display: flex;
  flex-direction: column;
}
@media (min-width: 768px) {
  .main-nav {
    flex-direction: row;
    justify-content: space-between;
  }
}
.main-nav a {
  display: block;
  text-align: center;
  padding: 1rem;
  color: var(--white);
  text-decoration: none;
  font-size: 2rem;
  font-weight: 700;
}
.main-nav a:hover {
  background-color: var(--primary-color);
  color: var(--black);
}

/* =========================
  Hero Section
========================= */
.hero {
  background-image: url("../img/hero.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  height: 45rem;
  position: relative;
  margin-bottom: 2rem;
}
.hero-content {
  position: absolute;
  background-color: rgb(0 0 0 / 0.7);
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.hero-content h2,
.hero-content p {
  color: var(--white);
}
.location {
  display: flex;
  align-items: flex-end;
}
@media (min-width: 768px) {
  .services {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 2rem;
  }
}

